# MoSnoPro-US

./: .gitignore  README.md  UserStories.md  app.py  environment.yml  meeting_notes.md  pyproject.toml  requirements.txt
.github/workflows/: python-package-conda.yml
data/example_data/: runinfo.txt
data/example_data/output/: runinfo.txt
data/example_data/snotel_csvs/: Morse_Lake.csv  Olallie_Meadows.csv  Paradise.csv  Stampede_Pass.csv  Stevens_Pass.csv  Swift_Creek.csv  Waterhole.csv  Wells_Creek.csv  White_Pass.csv
docs/: Final Presentation.pptx  component_specifications.md  components  dependencies.md  functional_specifications.md  meeting_notes.md  user_stories.md
examples/: examples.ipynb
mosnopro_us/: __init__.py  app.py  data_manager.py  map.ipynb  map_builder.py  plotting.py  utils.py
mosnopro_us/test/: context.py  test_app.py  test_data_manager.py  test_db_connection.ipynb  test_map_builder.py
src/: app.py
src/mosnopro_us/: __init__.py  data_manager.py  map_builder.py  plotting.py  utils.py
src/mosnopro_us/test/: test_app.py  test_data_manager.py  test_map_builder.py  test_plotting.py
