[build-system]
requires = ["setuptools>=64.0", "wheel", "setuptools_scm>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mosnopro_us"
dynamic = ["version"]
authors = [
    { name = "Daniel Hogan", email = "dlhogan@uw.edu" },
    { name = "Sruangsaeng Chaikasetsin", email = "sruanc@uw.edu" },
    { name = "Jane Dai", email = "jd74@uw.edu" },
    { name = "Xinya Tang", email = "xinyat@uw.edu" },
]
description = "A Streamlit-based tool for visualizing snowpack properties using SUMMA outputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "altair=5.5.0",
  "dropbox=12.0.2",
  "folium=0.18.0",
  "geopandas",
  "h5netcdf=1.4.1",
  "ipython=8.29.0",
  "ipywidgets=8.1.5",
  "jupyter=1.1.1",
  "notebook=7.2.2",
  "numpy=1.26.4",
  "pandas=2.2.3",
  "pytest=8.3.3",
  "python=3.10.0",
  "pytz=2024.1",
  "scikit-learn=1.5.2",
  "scipy=1.14.1",
  "streamlit=1.40.2",
  "streamlit-folium=0.23.2",
  "unittest",
  "xarray",
]

include = [
    "./data/*"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dlhogan97/MoSnoPro-US.git"
Issues = "https://github.com/dlhogan97/MoSnoPro-US/issues"

[tool.setuptools_scm]
